fix(Styles): adjust sticky positioning and spacing in contact component

--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -1,9 +1,7 @@
 .contact {
   &__left {
-    position: sticky;
-    top: 7%;
-
     @media (width <= 1280px) {
+      position: sticky;
       top: 20%;
     }
 
@@ -36,6 +34,7 @@
     font-family: "Antonio", sans-serif;
     font-weight: 600;
     font-size: 1.3rem;
+    color: var(--text-tertiary);
     text-transform: uppercase;
 
     @media (width <= 640px) {
@@ -217,7 +216,7 @@
 
     display: flex;
     align-items: center;
-    gap: .8rem;
+    gap: 0.8rem;
 
     border-radius: 9rem;
     padding: 0.5rem 1.2rem;
